--- a/back/.env.example
+++ b/back/.env.example
@@ -5,8 +5,8 @@ DATABASE_HOST=db
 DATABASE_USER=test
 DATABASE_PASSWORD=test
 DATABASE_NAME=test
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
+JWT_ACCESS_SECRET=11111111
+JWT_REFRESH_SECRET=11111111
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
